--- a/phison_realestate_backend/phison_realestate_backend/templates/account/base.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/base.html
@@ -2,8 +2,8 @@
 {% block title %}{% block head_title %}{% endblock head_title %}{% endblock title %}
 
 {% block content %}
-<div class="row">
-  <div class="col-md-6 offset-md-3">
+<div class="h-screen flex items-center justify-center p-4">
+  <div class="max-w-md w-full">
     {% block inner %}{% endblock %}
   </div>
 </div>
