--- a/phison_realestate_backend/phison_realestate_backend/templates/account/verification_sent.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/verification_sent.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% translate "Verify Your E-mail Address" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Verify Your E-mail Address" %}</h1>
+    <h1 class="mt-5 text-3xl font-semibold text-center">{% translate "Verify Your E-mail Address" %}</h1>
 
     <p>{% blocktranslate %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
 
