--- a/phison_realestate_backend/phison_realestate_backend/templates/account/logout.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/logout.html
@@ -5,15 +5,15 @@
 {% block head_title %}{% translate "Sign Out" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Sign Out" %}</h1>
+<h1 class="mt-5 text-3xl font-semibold text-center">{% translate "Sign Out" %}</h1>
 
-<p>{% translate 'Are you sure you want to sign out?' %}</p>
+<p class="text-center text-gray-500">{% translate 'Are you sure you want to sign out?' %}</p>
 
 <form method="post" action="{% url 'account_logout' %}">
   {% csrf_token %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btn btn-danger" type="submit">{% translate 'Sign Out' %}</button>
+  <button class="bg-purple text-white rounded-lg p-2 mx-auto block mt-2" type="submit">{% translate 'Sign Out' %}</button>
 </form>
 {% endblock %}
