--- a/phison_realestate_backend/phison_realestate_backend/templates/account/logout.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/account/logout.html
@@ -14,6 +14,6 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="bg-purple text-white rounded-lg p-2 mx-auto block mt-2" type="submit">{% translate 'Sign Out' %}</button>
+  <button class="bg-purple-900 text-white rounded-lg p-2 mx-auto block mt-2" type="submit">{% translate 'Sign Out' %}</button>
 </form>
 {% endblock %}
