Implement UI for properties images/videos section

--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
@@ -99,7 +99,7 @@
   </div>
 </nav>
 <main class="md:ml-64 p-4">
-  <div class="text-xs text-gray-500 mb-4">
+  <div class="mb-4 text-xs text-gray-500">
     <span>Home</span>
     <span>-</span>
     <span>Properties</span>
