--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/add_property.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/add_property.html
@@ -1,5 +1,47 @@
 {% extends "phison_panel/base.html" %}
 {% load static %}
 {% block main %}
+<div>
+  <h2 class="font-semibold text-xl">Add New Property</h2>
+  <p class="mt-2 text-gray-500 text-xs">Fill out the following information to add a new property</p>
+  <hr class="mt-3">
+</div>
 
+<div class="mt-4 flex justify-between gap-2 flex-wrap">
+  <div class="max-w-full">
+    <h5 class="font-semibold mb-4">Property Images</h5>
+    <div class="flex flex-wrap gap-2">
+      <div class="relative flex-shrink-0 w-32 h-32">
+        <img class="object-cover rounded-2xl h-full" src="{% static 'images/property-placeholder.png' %}"
+          alt="property image">
+        <div class="flex items-center justify-center bg-white w-6 h-6 absolute top-2 right-2 rounded-md">
+          <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_114_11571)">
+              <path
+                d="M0.916748 2.74984H10.0834M4.58341 5.0415V7.33317M6.41675 5.0415V7.33317M1.83341 2.74984H9.16675L8.44258 9.26734C8.41776 9.49163 8.31107 9.69889 8.14295 9.84943C7.97482 9.99996 7.75708 10.0832 7.53141 10.0832H3.46875C3.24308 10.0832 3.02534 9.99996 2.85722 9.84943C2.68909 9.69889 2.5824 9.49163 2.55758 9.26734L1.83341 2.74984ZM3.36654 1.44221C3.44068 1.28499 3.55799 1.15209 3.70479 1.059C3.8516 0.965924 4.02184 0.916502 4.19566 0.916504H6.8045C6.9784 0.916415 7.14874 0.965796 7.29564 1.05888C7.44253 1.15197 7.55991 1.28492 7.63408 1.44221L8.25008 2.74984H2.75008L3.36654 1.44221V1.44221Z"
+                stroke="#F04438" stroke-linecap="round" stroke-linejoin="round" />
+            </g>
+            <defs>
+              <clipPath id="clip0_114_11571">
+                <rect width="11" height="11" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+        </div>
+      </div>
+
+
+      <div class="flex-shring-0 border border-dashed border-gray-400 w-32 h-32 flex justify-center items-center rounded-2xl">
+        <img src="{% static 'images/add.svg' %}" alt="add image">
+      </div>
+    </div>
+  </div>
+
+  <div class="max-w-full">
+    <h5 class="font-semibold mb-4">Property Video</h5>
+    <div class="border border-dashed border-gray-400 w-32 h-32 flex justify-center items-center rounded-2xl">
+      <img src="{% static 'images/add.svg' %}" alt="add video">
+    </div>
+  </div>
+</div>
 {% endblock %}
