--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_textarea.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_textarea.html
@@ -2,8 +2,7 @@
   {% if label %}
     <label class="text-xs" for="{{id}}">{{label}}</label>
   {% endif %}
-  <textarea id="{{id}}" name="password"
+  <textarea id="{{id}}" name="{{name}}"
     class="bg-gray-50 border border-gray-300 text-gray-900 rounded-2xl focus:ring-orange-500 focus:border-orange-500 block w-full p-2.5"
-    placeholder="{{placeholder}}">
-  </textarea>
+    placeholder="{{placeholder}}" {{required_attribute}}>{% if value %}{{value}}{% endif %}</textarea>
 </div>
