Modify partial template for form fields

--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_neutral_button.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_neutral_button.html
@@ -1,3 +1,3 @@
-<button class="rounded-lg p-2.5 font-semibold text-sm border border-solid border-gray-200 {{class}}" type="submit">
+<button class="rounded-lg p-2.5 font-semibold text-sm border border-solid border-gray-200 {{class}}" {{form_attribute}} type="submit">
   {{label}}
 </button>
