--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_input.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_input.html
@@ -4,5 +4,5 @@
   {% endif %}
   <input id="{{id}}" type="{{type}}" name="{{name}}"
     class="bg-gray-50 border border-gray-300 text-gray-900 rounded-2xl focus:ring-orange-500 focus:border-orange-500 block w-full p-2.5"
-    placeholder="{{placeholder}}" {{required_attribute}} value="{% if value %}{{value}}{% endif %}" min="{{min}}" {{step_attribute}}>
+    placeholder="{{placeholder}}" {{required_attribute}} value="{% if value %}{{value}}{% endif %}" min="{{min}}" max="{{max}}" {{step_attribute}} {{form_attribute}}>
 </div>
