--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
@@ -46,6 +46,8 @@
   </div>
 </div>
 
+<form id="paymentForm" method="post"></form>
+
 <form method="post">
   {{form.errors}}
 
@@ -62,7 +64,7 @@
         {% include 'partials/_input.html' with label="Property size (M<sup>2</sup>)" id="property_size" name="size" placeholder="74.47" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.size.value required_attribute="required" step_attribute="step='any'" only %}
         <!-- TODO: Implement Location selection field -->
         {% include 'partials/_input.html' with label="Property location" id="num_of_bathrooms" placeholder="2" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" only %}
-        {% include 'partials/_textarea.html' with label="Property description" id="property_description" name="description" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.description.value required_attribute="required" only %}
+        {% include 'partials/_textarea.html' with label="Property description" id="property_description" name="description" placeholder="Property description" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.description.value required_attribute="required" only %}
         <div class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow">
           <!-- prettier-ignore -->
           {% include 'partials/_input.html' with label="Property pricing ($)" id="property_pricing" name="price" placeholder="2000.00" type="number" value=form.price.value required_attribute="required" step_attribute="step='any'" only %}
@@ -80,12 +82,12 @@
     <h5 class="font-semibold mb-4">Payment Information</h5>
     <hr>
     <div class="flex flex-wrap mt-4 gap-3">
-      <!-- prettier-ignore -->
-      {% include 'partials/_input.html' with label="Payment Title" id="property_name" placeholder="g+1" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" only %}
-      {% include 'partials/_input.html' with label="Payment Time Period" id="property_name" placeholder="g+1" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" only %}
-      {% include 'partials/_input.html' with label="Payment Amount" id="property_name" placeholder="g+1" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" only %}
-      {% include 'partials/_textarea.html' with label="Property description" id="num_of_bathrooms" placeholder="2" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" only %}
-      {% include 'partials/_neutral_button.html' with label="Add Payment" id="num_of_bathrooms" placeholder="2" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 self-end mb-2" only %}
+        <!-- prettier-ignore -->
+        {% include 'partials/_input.html' with label="Payment Title" id="payment_title" name="payment_title" placeholder="Initial Payment" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" required_attribute="required" form_attribute="form='paymentForm'" only %}
+        {% include 'partials/_input.html' with label="Payment Time Period" id="payment_time_period" name="payment_time_period" placeholder="2 months after initial agreement" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" required_attribute="required" form_attribute="form='paymentForm'" only %}
+        {% include 'partials/_input.html' with label="Payment Amount (%)" id="payment_amount" name="payment_amount" placeholder="Your payment amount in percentage" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" min="1" max="100" required_attribute="required" form_attribute="form='paymentForm'" only %}
+        {% include 'partials/_textarea.html' with label="Property description" id="payment_description" name="payment_description" placeholder="Payment description" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" required_attribute="required" form_attribute="form='paymentForm'" only %}
+        {% include 'partials/_neutral_button.html' with label="Add Payment" class="basis-full md:basis-1/3 lg:basis-1/4 self-end mb-2" form_attribute="form='paymentForm'" only %}
     </div>
   </div>
 
@@ -93,7 +95,7 @@
     <h6 class="font-semibold mb-4 text-sm">Payment Schedule</h6>
 
     <div class="overflow-x-auto relative mb-4">
-      <table class="w-full text-xs text-left text-gray-500">
+      <table id="table" class="w-full text-xs text-left text-gray-500">
         <thead class="text-xs text-gray-400 uppercase bg-gray-50 border-b">
           <tr>
             <th scope="col" class="py-3 px-6">
@@ -106,25 +108,11 @@
               Time period
             </th>
             <th scope="col" class="py-3 px-6">
-              Amount
+              Amount (%)
             </th>
           </tr>
         </thead>
-        <tbody>
-          <tr class="bg-white border-b">
-            <th scope="row" class="py-4 px-6 font-medium text-blue-600 whitespace-nowrap">
-              1st Payment
-            </th>
-            <td class="py-4 px-6">
-              Sliver
-            </td>
-            <td class="py-4 px-6">
-              Laptop
-            </td>
-            <td class="py-4 px-6">
-              $2999
-            </td>
-          </tr>
+        <tbody id="tableBody">
         </tbody>
       </table>
 
@@ -136,4 +124,41 @@
     </div>
   </div>
 </form>
+{% endblock %}
+{% block inline_javascript %}
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const paymentForm = document.querySelector('#paymentForm');
+    paymentForm.addEventListener('submit', (event) => {
+      event.preventDefault();
+
+      const paymentTitle = document.querySelector('#payment_title').value;
+      const paymentTimePeriod = document.querySelector('#payment_time_period').value;
+      const paymentAmount = document.querySelector('#payment_amount').value;
+      const paymentDescription = document.querySelector('#payment_description').value;
+
+      const table = document.querySelector('#tableBody');
+
+      const rowsCount = table.rows.length;
+      const row = table.insertRow(rowsCount);
+      row.classList.add('bg-white', 'border-b');
+      row.innerHTML = `
+        <th scope="row" class="py-4 px-6 font-medium text-blue-600 whitespace-nowrap">
+          ${paymentTitle}
+        </th>
+        <td class="py-4 px-6">
+          ${paymentDescription}
+        </td>
+        <td class="py-4 px-6">
+          ${paymentTimePeriod}
+        </td>
+        <td class="py-4 px-6">
+          ${paymentAmount}
+        </td>
+      `;
+
+      paymentForm.reset();
+    });
+  });
+</script>
 {% endblock %}
