--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/property_form.html
@@ -49,8 +49,6 @@
 <form id="paymentForm" method="post"></form>
 
 <form method="post">
-  {{form.errors}}
-
   {% csrf_token %}
   <div class="mt-4">
     <h5 class="font-semibold mb-4">Property Information</h5>
@@ -58,16 +56,16 @@
     <div class="flex flex-wrap mt-4 gap-3">
         <!-- prettier-ignore -->
         {% include 'partials/_input.html' with label="Property name" id="property_name" name="name" placeholder="G+2 Luxury Villa" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.name.value required_attribute="required" only%}
-        {% include 'partials/_input.html' with label="Number of bed rooms" id="property_bed_room_count" name="bed_room_count" placeholder="2" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.bed_room_count.value min=0 only %}
-        {% include 'partials/_input.html' with label="Number of bathrooms" id="property_bath_room_count" name="bath_room_count" placeholder="1" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.bath_room_count.value min=0 only %}
-        {% include 'partials/_input.html' with label="Number of parkings" id="property_parking_count" name="parking_count" placeholder="1" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.parking_count.value min=0 only %}
-        {% include 'partials/_input.html' with label="Property size (M<sup>2</sup>)" id="property_size" name="size" placeholder="74.47" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.size.value required_attribute="required" step_attribute="step='any'" only %}
+        {% include 'partials/_input.html' with label="Number of bed rooms" id="property_bed_room_count" name="bed_room_count" placeholder="2" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.bed_room_count.value min=0 required_attribute="required" only %}
+        {% include 'partials/_input.html' with label="Number of bathrooms" id="property_bath_room_count" name="bath_room_count" placeholder="1" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.bath_room_count.value min=0 required_attribute="required" only %}
+        {% include 'partials/_input.html' with label="Number of parkings" id="property_parking_count" name="parking_count" placeholder="1" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.parking_count.value min=0 required_attribute="required" only %}
+        {% include 'partials/_input.html' with label="Property size (M<sup>2</sup>)" id="property_size" name="size" placeholder="74.47" type="number" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.size.value required_attribute="required" step_attribute="step='any'" required_attribute="required" only %}
         <!-- TODO: Implement Location selection field -->
-        {% include 'partials/_input.html' with label="Property location" id="num_of_bathrooms" placeholder="2" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" only %}
+        {% include 'partials/_input.html' with label="Property location" id="num_of_bathrooms" placeholder="2" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" required_attribute="required" only %}
         {% include 'partials/_textarea.html' with label="Property description" id="property_description" name="description" placeholder="Property description" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" value=form.description.value required_attribute="required" only %}
         <div class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow">
           <!-- prettier-ignore -->
-          {% include 'partials/_input.html' with label="Property pricing ($)" id="property_pricing" name="price" placeholder="2000.00" type="number" value=form.price.value required_attribute="required" step_attribute="step='any'" only %}
+          {% include 'partials/_input.html' with label="Property pricing ($)" id="property_pricing" name="price" placeholder="2000.00" type="number" value=form.price.value required_attribute="required" step_attribute="step='0.1'" only %}
           {% include 'partials/_checkbox.html' with label="Featured property" id="property_is_featured" name="is_featured" only %}
         </div>
         <div class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow">
@@ -80,7 +78,26 @@
 
   <div class="mt-4">
     <h5 class="font-semibold mb-4">Payment Information</h5>
+
+    {% if formset.non_form_errors %}
+      <div class="flex p-4 mb-4 text-sm text-red-700 bg-red-100 rounded-lg dark:bg-red-200 dark:text-red-800" role="alert">
+        <svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+        <span class="sr-only">Info</span>
+        <div>
+          <span class="font-medium">Error!</span> You must add at least one payment information.
+        </div>
+      </div>
+    {% endif %}
+
     <hr>
+
+    <div id="hiddenFormControls">
+      <input type="hidden" name="payment_infos-TOTAL_FORMS" id="id_payment_infos-TOTAL_FORMS">
+      <input type="hidden" name="payment_infos-INITIAL_FORMS" value="0" id="id_payment_infos-INITIAL_FORMS">
+      <input type="hidden" name="payment_infos-MIN_NUM_FORMS" value="1" id="id_payment_infos-MIN_NUM_FORMS">
+      <input type="hidden" name="payment_infos-MAX_NUM_FORMS" value="1000" id="id_payment_infos-MAX_NUM_FORMS">
+    </div>
+
     <div class="flex flex-wrap mt-4 gap-3">
         <!-- prettier-ignore -->
         {% include 'partials/_input.html' with label="Payment Title" id="payment_title" name="payment_title" placeholder="Initial Payment" type="text" class="basis-full md:basis-1/3 lg:basis-1/4 flex-grow" required_attribute="required" form_attribute="form='paymentForm'" only %}
@@ -128,7 +145,10 @@
 {% block inline_javascript %}
 <script>
   window.addEventListener('DOMContentLoaded', () => {
+    const hiddenFormControls = document.querySelector('#hiddenFormControls');
+
     const paymentForm = document.querySelector('#paymentForm');
+
     paymentForm.addEventListener('submit', (event) => {
       event.preventDefault();
 
@@ -155,6 +175,16 @@
         <td class="py-4 px-6">
           ${paymentAmount}
         </td>
+      `;
+
+      const totalFormsInput = document.querySelector('#id_payment_infos-TOTAL_FORMS');
+      totalFormsInput.value = rowsCount + 1;
+
+      hiddenFormControls.innerHTML = hiddenFormControls.innerHTML + `
+        <input type="text" name="payment_infos-${rowsCount}-title" maxlength="100" id="id_payment_infos-${rowsCount}-title" value="${paymentTitle}" hidden>
+        <input type="text" name="payment_infos-${rowsCount}-time_period" maxlength="100" id="id_payment_infos-${rowsCount}-time_period" value="${paymentTimePeriod}" hidden>
+        <input type="number" name="payment_infos-${rowsCount}-amount" step="0.01" id="id_payment_infos-${rowsCount}-amount" value="${paymentAmount}" hidden>
+        <textarea name="payment_infos-${rowsCount}-description" cols="40" rows="10" id="id_payment_infos-${rowsCount}-description" hidden>${paymentDescription}</textarea>
       `;
 
       paymentForm.reset();
