Add pagination to property list

--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_property_card.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_property_card.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="bg-white rounded-2xl p-2 shadow-lg hover:shadow-xl group relative h-full">
   <div class="relative -mx-2 -mt-2">
-    <img class="w-full object-cover rounded-2xl" src="{% static 'images/property-placeholder.png' %}" alt="Property image">
+    <img class="w-full object-cover rounded-2xl h-36" src="https://cdn.pixabay.com/photo/2015/10/20/18/57/furniture-998265_960_720.jpg" alt="Property image">
     <span class="absolute right-2 bottom-2 text-xs backdrop-blur-lg text-white p-2 rounded-lg group-hover:bg-orange-900">Apartment</span>
   </div>
   <h3 class="mt-3 font-semibold">{{property.name}}</h3>
