--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
@@ -98,7 +98,7 @@
     </div>
   </div>
 </nav>
-<main class="md:ml-64 p-4">
+<main class="md:ml-64 p-4 relative flex flex-col min-h-screen">
   <div class="mb-4 text-xs text-gray-500">
     <span>Home</span>
     <span>-</span>
