Implement UI for buyers list

--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base.html
@@ -70,14 +70,14 @@
 
           <li class="{% if url_name == 'buyer_list' %} bg-purple-900 text-white {% else %} text-gray-600 hover:bg-gray-100 {% endif %} rounded-lg p-2 font-medium mb-3">
             <a class="flex"  href="{% url 'phison_panel:buyer_list' %}">
-              <svg class="mr-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="mr-2" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M9 13C11.2091 13 13 11.2091 13 9C13 6.79086 11.2091 5 9 5C6.79086 5 5 6.79086 5 9C5 11.2091 6.79086 13 9 13Z"
-                  stroke="#475467" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 <path
                   d="M16 19C16 15.686 12.866 13 9 13C5.134 13 2 15.686 2 19M15 13C15.6684 13 16.3261 12.8324 16.9131 12.5127C17.5 12.193 17.9975 11.7313 18.3601 11.1698C18.7227 10.6083 18.9388 9.96494 18.9886 9.29841C19.0385 8.63189 18.9205 7.9635 18.6456 7.3543C18.3706 6.7451 17.9473 6.21453 17.4144 5.81105C16.8816 5.40757 16.2561 5.14404 15.5952 5.04456C14.9342 4.94507 14.2589 5.01279 13.6309 5.24154C13.0028 5.47028 12.4421 5.85275 12 6.354"
-                  stroke="#475467" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M22 19C22 15.686 18.866 13 15 13C14.193 13 12.897 12.707 12 11.765" stroke="#475467"
+                   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M22 19C22 15.686 18.866 13 15 13C14.193 13 12.897 12.707 12 11.765"
                   stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
               </svg>
               Buyers
