--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
@@ -7,7 +7,7 @@
 <div class="mt-4 lg:flex lg:gap-6">
   <div class="mb-4 basis-1/3 flex-grow-0 flex-shrink lg:border-r border-solid border-r-gray-300">
     <h5 class="font-semibold">Property Information</h5>
-    <div class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6">
+    <div id="chooseProperty" class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6 cursor-pointer">
       <div class="text-gray-500 font-medium flex flex-col items-center">
         <img src="{% static 'images/add.svg' %}" alt="Add property">
         <p class="mt-4 text-center">Choose Property</p>
@@ -16,7 +16,7 @@
     </div>
 
     <h5 class="mt-6 font-semibold">Property Information</h5>
-    <div class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6">
+    <div class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6 cursor-pointer">
       <div class="text-gray-500 font-medium flex flex-col items-center">
         <img src="{% static 'images/add.svg' %}" alt="Add property">
         <p class="mt-4 text-center">Choose Customer</p>
@@ -71,4 +71,17 @@
     </div>
   </div>
 </div>
+{% endblock %}
+{% block inline_javascript %}
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const chooseProperty = document.querySelector('#chooseProperty');
+    const modal = document.querySelector('#modal');
+    chooseProperty.addEventListener('click', () => {
+      const modalTitle = document.querySelector('#modalTitle');
+      modalTitle.innerHTML = `Test title`
+      modal.showModal();
+    });
+  });
+</script>
 {% endblock %}
