--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_form.html
@@ -7,22 +7,34 @@
 <div class="mt-4 lg:flex lg:gap-6">
   <div class="mb-4 basis-1/3 flex-grow-0 flex-shrink lg:border-r border-solid border-r-gray-300">
     <h5 class="font-semibold">Property Information</h5>
-    <div id="chooseProperty" class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6 cursor-pointer">
-      <div class="text-gray-500 font-medium flex flex-col items-center">
-        <img src="{% static 'images/add.svg' %}" alt="Add property">
-        <p class="mt-4 text-center">Choose Property</p>
-        <p class="mt-2 text-xs text-center">Click here to select property</p>
+
+    <div id="selectedPropertyContainer" class="mt-5 flex hidden">
+      <div id="propertyCard"></div>
+      <button class="border-none p-2 bg-white rounded-xl outline-none ml-2 self-start" id="removePropertySelection">
+        <img src="{% static 'images/x.svg' %}" alt="close">
+      </button>
+    </div>
+
+    <div id="selectProperty">
+      <div class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6 cursor-pointer">
+        <div class="text-gray-500 font-medium flex flex-col items-center">
+          <img src="{% static 'images/add.svg' %}" alt="Add property">
+          <p class="mt-4 text-center">Choose Property</p>
+          <p class="mt-2 text-xs text-center">Click here to select property</p>
+        </div>
       </div>
     </div>
 
-    <h5 class="mt-6 font-semibold">Property Information</h5>
-    <div class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6 cursor-pointer">
-      <div class="text-gray-500 font-medium flex flex-col items-center">
-        <img src="{% static 'images/add.svg' %}" alt="Add property">
-        <p class="mt-4 text-center">Choose Customer</p>
-        <p class="mt-2 text-xs text-center">Click here to select customer</p>
+    <h5 class="mt-6 font-semibold">Customer Information</h5>
+    <a href="?open_modal=customer">
+      <div class="mt-5 border border-gray-400 border-dashed rounded-2xl py-14 px-10 mx-6 cursor-pointer">
+        <div class="text-gray-500 font-medium flex flex-col items-center">
+          <img src="{% static 'images/add.svg' %}" alt="Add property">
+          <p class="mt-4 text-center">Choose Customer</p>
+          <p class="mt-2 text-xs text-center">Click here to select customer</p>
+        </div>
       </div>
-    </div>
+    </a>
   </div>
 
   <div class="basis-2/3 flex-grow">
@@ -74,13 +86,22 @@
 {% endblock %}
 {% block inline_javascript %}
 <script>
+  import { showDialog, renderDjangoTemplate } from "/static/js/utils.js";
+  import {initSelectProperty} from "/static/js/select_property.js";
+
   window.addEventListener('DOMContentLoaded', () => {
-    const chooseProperty = document.querySelector('#chooseProperty');
-    const modal = document.querySelector('#modal');
-    chooseProperty.addEventListener('click', () => {
-      const modalTitle = document.querySelector('#modalTitle');
-      modalTitle.innerHTML = `Test title`
-      modal.showModal();
+    const selectedPropertyContainer = document.querySelector('#selectedPropertyContainer');
+    const selectProperty = document.querySelector('#selectProperty');
+    selectProperty.addEventListener('click', async () => {
+      const template = await renderDjangoTemplate('_select_property.html');
+      await showDialog('Select Property', template);
+      initSelectProperty();
+    });
+
+    const removePropertySelectionBtn = document.querySelector('#removePropertySelection');
+    removePropertySelectionBtn.addEventListener('click', () => {
+      selectProperty.classList.remove('hidden');
+      selectedPropertyContainer.classList.add('hidden');
     });
   });
 </script>
