--- a/phison_realestate_backend/phison_realestate_backend/templates/partials/_primary_button.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/partials/_primary_button.html
@@ -1,3 +1,3 @@
-<button class="bg-purple-900 text-white rounded-lg p-2.5 font-semibold {{class}}" type="submit">
+<button class="bg-purple-900 text-white rounded-lg p-2.5 font-semibold {{class}}" {{form_attribute}} type="submit">
   {{label}}
 </button>
