--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/buyer_list.html
@@ -3,4 +3,4 @@
 {% block add_button_link %}{% url 'phison_panel:new_buyer' %}{% endblock %}
 {% block add_button_label %}Add buyer{% endblock %}
 {% block header_description %}All of your buyers{% endblock %}
-{% block card %}{% include 'partials/_buyer_card.html' %}{% endblock %}
+{% block card %}{% include 'partials/_buyer_card.html' with buyer=buyer %}{% endblock %}
