--- a/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base_list.html
+++ b/phison_realestate_backend/phison_realestate_backend/templates/phison_panel/base_list.html
@@ -52,12 +52,14 @@
   </div>
 
   <div class="flex flex-wrap items-stretch gap-y-6 mt-2">
+    {% for buyer in object_list %}
       <div class="pr-3 basis-1/2 md:basis-1/3 lg:basis-1/4 md:flex-grow-0 items-stretch flex-shrink">
         {% block card %} {% endblock %}
       </div>
+    {% endfor %}
   </div>
 
-  {% if page_obj %}
+  {% if page_obj.has_other_pages %}
     <div class="flex-grow flex items-end justify-center">
       {% include 'partials/_paginator.html' %}
     </div>
